# treeland

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  ChangeLog  INSTALL.md  README.md  README.zh_CN.md  REUSE.toml  a  default.nix  flake.nix  renovate.json
data/: CMakeLists.txt
data/dbus/: org.deepin.compositor1.xml
data/man/: sddm-greeter.rst.in  sddm-state.conf.rst.in  sddm.conf.rst.in  sddm.rst.in
data/shortcuts/: _dde-launchpad.ini  _deepin-screen-recorder.ini  _deepin-screenshot.ini  _deepin-terminal.ini
data/systemd/: CMakeLists.txt  dde-fake-session-initialized.target  dde-fake-session-shutdown.target  dde-fake-session.service.in  dde-fake-session.target  dde-session-shortcut.service.in  treeland-sd.service.in  treeland.service
data/wayland-sessions/: CMakeLists.txt  treeland-user.desktop.in  treeland.desktop  treeland.desktop.in
examples/: CMakeLists.txt
examples/test_app_id_resolver_helper/: CMakeLists.txt  main.cpp
examples/test_capture/: CMakeLists.txt  Main.qml  canvaswindow.cpp  capture.cpp  capture.h  main.cpp  player.cpp  player.h  subwindow.cpp  subwindow.h  toolwindow.cpp
examples/test_color_control/: CMakeLists.txt  main.cpp
examples/test_color_manager/: CMakeLists.txt  main.cpp
examples/test_data_control_manager/: clipboard.h  datacontrolmanagerv1.cpp  datacontrolmanagerv1.h
examples/test_glass/: CMakeLists.txt  Main.qml  helper.cpp  helper.h  main.cpp
examples/test_hide_window/: CMakeLists.txt  main.cpp
examples/test_idle_inhibit_v1/: CMakeLists.txt  idleclient.cpp  idleclient.h  idleinhibitv1.cpp  idleinhibitv1.h  idlenotifyv1.cpp  idlenotifyv1.h  main.cpp
examples/test_im_candidate_panel_tag/: CMakeLists.txt  main.c
examples/test_im_candidate_panel_xprop/: CMakeLists.txt  main.cpp
examples/test_input_manager/: CMakeLists.txt  inputmanagerclient.cpp  inputmanagerclient.h  main.cpp
examples/test_keyboard_state_notify/: CMakeLists.txt  main.cpp
examples/test_keystate/: CMakeLists.txt  main.cpp
examples/test_monitor_active_event/: CMakeLists.txt  main.cpp
examples/test_multitaskview/: CMakeLists.txt  Main.qml  ddeshell.h
examples/test_pinch_handler/: CMakeLists.txt  eventitem.h  main.cpp
examples/test_prelaunch_splash_client/: CMakeLists.txt  main.cpp
examples/test_primary_output/: CMakeLists.txt  main.cpp
examples/test_set_treeland_wallpaper/: CMakeLists.txt  Wallpaper.qml  WallpaperCard.qml  WallpaperSetting.qml  imagehelper.cpp  main.qml  wallpapercardmodel.h
examples/test_set_wallpaper/: CMakeLists.txt  main.cpp  treelandwallpapermanagerclient.cpp  treelandwallpapermanagerclient.h
examples/test_set_xwindow_position/: CMakeLists.txt  main.cpp
examples/test_shortcut_capture/: CMakeLists.txt  main.cpp
examples/test_shortcut_manager/: CMakeLists.txt  main.cpp
examples/test_show_desktop/: CMakeLists.txt  main.cpp
examples/test_super_overlay_surface/: CMakeLists.txt  ddeshellwayland.cpp  ddeshellwayland.h  ddeshelsurfacewindow.cpp  main.cpp
examples/test_toplevel_tag/: CMakeLists.txt  main.cpp
examples/test_virtual_output/: CMakeLists.txt  main.cpp  virtualclient.cpp  virtualclient.h  virtualoutput.cpp  virtualoutput.h  virtualoutputmanager.cpp  virtualoutputmanager.h
examples/test_wallpaper_color/: CMakeLists.txt  main.cpp
examples/test_window_appearance/: CMakeLists.txt  main.cpp  personalization_manager.cpp  personalization_manager.h
examples/test_window_bg/: CMakeLists.txt  main.cpp
examples/test_window_blur/: CMakeLists.txt  main.cpp
examples/test_window_crusor/: main.cpp  personalization_manager.cpp
examples/test_window_cursor/: CMakeLists.txt  personalization_manager.cpp  personalization_manager.h
examples/test_window_overlapped/: CMakeLists.txt  dde_shell.cpp
examples/test_window_picker/: CMakeLists.txt  Main.qml  ddeshell.h
examples/test_xdgport_wallpaper/: CMakeLists.txt  main.cpp  mainwindow.h
misc/cmake/: CMakeLists.txt  TreelandConfig.cmake.in  treeland-protocols.pc.in
misc/dconfig/: CMakeLists.txt  org.deepin.dde.treeland.app.json  org.deepin.dde.treeland.json  org.deepin.dde.treeland.output.json  org.deepin.dde.treeland.user.json  org.deepin.dde.treeland.user.seat.json  org.deepin.treeland.global.json  org.deepin.treeland.globle.json  org.deepin.treeland.json  org.deepin.treeland.output.json  org.deepin.treeland.user.json
misc/systemd/: CMakeLists.txt  treeland-screensaver.service.in  treeland-session-helper.service.in  treeland.service.in
misc/wayland-sessions/: CMakeLists.txt  treeland-user-wrapper.in  treeland-user.desktop.in  treeland.desktop.in
qwlroots/: CMakeLists.txt  CMakePresets.json
qwlroots/debian/: control  rules
qwlroots/src/: CMakeLists.txt  qwglobal.h  qwobject.cpp  qwobject.h  qwsession.h
src/: CMakeLists.txt  deepintheme.cpp  deepintheme.h  main.cpp  systemd-socket.cpp  treeland.cpp  treeland.h  treeland.sh  treeland_assets.qrc  xwayland.cpp
src/auth/: Auth.cpp  Auth.h  AuthMessages.h  AuthRequest.cpp  CMakeLists.txt
src/common/: ArrayInt.cpp  CMakeLists.txt  ConfigReader.cpp  Configuration.h  Constants.h.in  DBusTypes.h  MFAInfoList.cpp  MessageHandler.h  Messages.h  QVariantMap.cpp  Session.cpp  Session.h  constants.h.in  treelandlogging.cpp  treelandlogging.h
src/config/: dconfig_org_deepin_treeland_globle.hpp  dconfig_org_deepin_treeland_user.hpp  treelandconfig.cpp  treelandconfig.h
src/core/: CMakeLists.txt  cmdline.cpp  gestures.cpp  (+50 more)
tests/: CMakeLists.txt
wallpaper-factory/: CMakeLists.txt  Image.qml  Shader.qml  Video.qml  loggings.cpp  loggings.h  main.cpp  mpvvideocontroller.cpp  mpvvideocontroller.h  mpvvideoitem.cpp  mpvvideoitem.h  qwaylandwallpapershellintegration.cpp  qwaylandwallpapershellintegration_p.h  qwaylandwallpapershellintegrationplugin.cpp  qwaylandwallpapersurface.cpp  qwaylandwallpapersurface_p.h  shaderframeclock.cpp  shaderframeclock.h  treelandwallpapernotifierclient.cpp  treelandwallpapernotifierclient.h  wallpaper-shell.json  wallpaper-shell.json.license  wallpaperwindow.cpp  wallpaperwindow.h
wlroots/: CMakeLists.txt  UPSTREAM  update-from-upstream.sh
(+1474 files in other folders)
