set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

add_subdirectory(test_protocol_personalization)
add_subdirectory(test_protocol_primary-output)
add_subdirectory(test_protocol_shortcut)
add_subdirectory(test_protocol_virtual-output)
add_subdirectory(test_protocol_wallpaper-color)
add_subdirectory(test_protocol_window-management)
add_subdirectory(test_protocol_prelaunch-splash)
add_subdirectory(test_shortcutcontroller)
add_subdirectory(test_wallpaperconfig)
add_subdirectory(test_outputconfigstate)
add_subdirectory(test_gestures)
add_subdirectory(test_togglablegesture)
add_subdirectory(test_protocol_integration)
add_subdirectory(test_output_scale)
add_subdirectory(test_xresource)
add_subdirectory(test_xsettings)
add_subdirectory(test_backlight)
add_subdirectory(test_lockscreen)
add_subdirectory(test_greeterproxy)
add_subdirectory(test_windowconfigstore)
